--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -155,14 +155,14 @@ hr.small {
     position: relative;
     width: 100%;
     height: 100%;
-    background: url(../img/cow.jpg) no-repeat center center scroll;
+    background: url(../img/cow.JPG) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
 }
 
-section .youtube {  
+section .youtube {
   position: relative;
   /* (9 / 16 * 100) */
   padding-bottom: 56.25%;
@@ -171,9 +171,9 @@ section .youtube {
   margin-bottom: 0px;
 }
 
-section .youtube iframe,  
-section .youtube object,  
-section .youtube embed {  
+section .youtube iframe,
+section .youtube object,
+section .youtube embed {
   position: absolute;
   top: 0;
   left: 0;
